force-app/main/default/objects/refedge__Label__c/refedge__Label__c.object-meta.xml
<CustomObject>
    <description>An object that contains the various  Labels.</description>
    <label>Filter</label>
    <nameField>
        <label>Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>