force-app/main/default/objects/refedge__Label__c/fields/refedge__Nomination_Filter_Order__c.field-meta.xml
<CustomField>
    <fullName>refedge__Nomination_Filter_Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>