force-app/main/default/objects/refedge__Label__c/fields/refedge__Profile_Update_Visible__c.field-meta.xml
<CustomField>
    <fullName>refedge__Profile_Update_Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Indicates if this Filter should be shown on the Profile Update page and the Attributes update modal when it is accessed from the Profile Update page.</inlineHelpText>
    <label>Profile Update Visible</label>
    <type>Checkbox</type>
</CustomField>