force-app/main/default/objects/refedge__Label__c/fields/refedge__Show_in_P2P__c.field-meta.xml
<CustomField>
    <fullName>refedge__Show_in_P2P__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show in P2P indicates that this Filter should be shown when at least one of the Accounts is a P2P Account.</description>
    <inlineHelpText>Show in P2P indicates that this Filter should be shown when at least one of the Accounts is a P2P Account.</inlineHelpText>
    <label>Show in P2P</label>
    <type>Checkbox</type>
</CustomField>