force-app/main/default/objects/refedge__Label__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>NAME</columns>
    <columns>refedge__BasicSearchView__c</columns>
    <columns>refedge__Description__c</columns>
    <columns>refedge__Nomination_Filter_Order__c</columns>
    <columns>refedge__Filter_no__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>